<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/project_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/comment_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:textColor="#4a4a4a"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ic_unfollow"
                        android:foreground="?attr/selectableItemBackgroundBorderless" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/comment_email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/comment_commentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_text"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_corner"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/tagged_users" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/tagged_users"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:focusableInTouchMode="true"
                                android:gravity="start"
                                android:inputType="textMultiLine"
                                android:scrollbars="vertical"
                                android:text="@string/no_tags"
                                android:textSize="12sp"
                                tools:ignore="LabelFor" />

                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/attachments" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.pchmn.materialchips.ChipView
                                android:id="@+id/file_chip"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />

                            <TextView
                                android:id="@+id/tv_many_files"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:textColor="@color/hashtagColor" />
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:divider="@drawable/empty_comments_divider"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_like"
                    android:text="0" />

                <TextView
                    android:id="@+id/dislikes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_dislike"
                    android:text="0" />

                <TextView
                    android:id="@+id/comment_time_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/time_txt"
                    android:textColor="@color/dialer_alphabets"
                    android:textSize="12sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v7.widget.CardView>