<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="visibility"
            type="com.example.user.mvvmcollabreusableapp.network.model.VisibilityModel" />

        <variable
            name="handler"
            type="com.example.user.mvvmcollabreusableapp.fragment.CollabCreatePostFragment" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/bottom_sheet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_sheet_corner"
                    android:hint="@string/title"
                    android:padding="10dp"
                    android:text="@string/create_txt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:id="@+id/close_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/ic_close_white_24dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{(v)->handler.closePost()}"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrollView_createpost"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:descendantFocusability="blocksDescendants"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/to_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/to" />

                    <Spinner
                        android:id="@+id/spinner_users_visibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/to_txt"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/emp_reg_bg"
                        android:entries="@array/users"
                        android:padding="10dp"
                        app:chipsinputVisibility="@{chipsinputVisibility}"
                        app:selectedValue="@={visibility.text}"
                        app:visibilityLine="@{visibilityLine}" />

                    <com.pchmn.materialchips.ChipsInput
                        android:id="@+id/chipsinput_visibility"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/spinner_users_visibility"
                        android:background="@color/md_grey_400"
                        android:padding="3dp"
                        android:visibility="gone"
                        app:chip_backgroundColor="@null"
                        app:chip_deletable="true"
                        app:chip_deleteIconColor="@null"
                        app:chip_detailed_textColor="@android:color/holo_red_dark"
                        app:chip_hasAvatarIcon="true"
                        app:chip_labelColor="@null"
                        app:filterable_list_backgroundColor="@null"
                        app:filterable_list_textColor="@null"
                        app:hint="Search visibility user(s)"
                        app:hintColor="@color/white"
                        app:maxRows="2"
                        app:showChipDetailed="false"
                        app:textColor="@color/white"
                        tools:targetApi="lollipop" />

                    <View
                        android:id="@+id/visibility_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/chipsinput_visibility"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorPrimary"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/ed_createpost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/visibility_line"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_corner_emp"
                        android:gravity="top|start"
                        android:hint="@string/create_post"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:minLines="8"
                        android:padding="10dp"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:id="@+id/chipsinput_user_tags"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_below="@+id/ed_createpost"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_corner_emp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_add_tags"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:onClick="@{()->handler.addTags()}"
                            android:text="@string/attachments_user_tags"
                            android:textColor="@color/dark_blue" />

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="2"
                            android:padding="5dp">

                            <LinearLayout
                                android:id="@+id/container_user_tags"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:divider="@drawable/empty_attachment_divider"
                                android:orientation="horizontal"
                                android:showDividers="middle" />

                        </HorizontalScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chipsinput_container"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_below="@+id/chipsinput_user_tags"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_corner_emp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/attachments" />

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="2"
                            android:padding="5dp">

                            <LinearLayout
                                android:id="@+id/container_attachments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:divider="@drawable/empty_attachment_divider"
                                android:orientation="horizontal"
                                android:showDividers="middle" />

                        </HorizontalScrollView>
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>

            <RelativeLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight=".1"
                android:background="@color/md_grey_200"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/attachment"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{(v)->handler.enterTags()}"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:srcCompat="@drawable/ic_tag"
                    tools:ignore="ContentDescription,NestedWeights" />

                <ImageView
                    android:id="@+id/attachment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/camera"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{(v)->handler.addAttachments()}"
                    android:padding="15dp"
                    app:srcCompat="@drawable/ic_attach_file_black_24dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/btnSend"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{()->handler.launchCamera()}"
                    android:padding="15dp"
                    android:tint="@color/theme_teal"
                    app:srcCompat="@drawable/ic_menu_camera"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/btnSend"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bg_corner_emp"
                    android:backgroundTint="@color/colorPrimary"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{(v)->handler.sendPost()}"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>